--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sidebarx: ^0.16.1
   google_fonts: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
