--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
     sdk: flutter
   sidebarx: ^0.16.1
   google_fonts: ^5.1.0
-
-
+  responsive_framework: ^0.2.0
+ 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.5.0
+  collapsible_sidebar: ^2.0.5+1
 
 dev_dependencies:
   flutter_test:
