--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
   cloud_firestore: ^4.9.1
+  provider: ^6.0.5
+  firebase_database: ^10.2.5
+  flutter_spinkit: ^5.2.0
+  another_flushbar: ^1.12.30
 
 
 dev_dependencies:
