--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_database: ^10.2.5
   flutter_spinkit: ^5.2.0
   another_flushbar: ^1.12.30
+  flutter_pdf_plugin: ^1.0.1
+  firebase_storage: ^11.2.6
 
 
 dev_dependencies:
