--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   another_flushbar: ^1.12.30
   flutter_pdf_plugin: ^1.0.1
   firebase_storage: ^11.2.6
+  flutter_flushbar: ^0.0.2
+  shared_preferences: ^2.2.1
+  rxdart: ^0.27.7
 
 
 dev_dependencies:
