--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   rxdart: ^0.27.7
   get: ^4.6.5
   intl: ^0.18.1
+  form_builder: ^1.0.1
+  flutter_form_builder: ^9.1.1
+  fluttertoast: ^8.2.2
 
 
 dev_dependencies:
