--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   form_builder: ^1.0.1
   flutter_form_builder: ^9.1.1
   fluttertoast: ^8.2.2
+  readmore: ^2.1.0
 
 
 dev_dependencies:
